2009-12-09

	* src/prefs_common_dialog.c: adjusted layout.

2009-12-09

	* srsrc/quick_search.[ch]: added status label to display number of
	  matched messages.

2009-12-09

	* src/icons/interface.xpm: modified.

2009-12-09

	* src/foldersel.c: made New button secondary.

2009-12-09

	* src/compose.[ch]: added a menu item to request disposition
	  notification.

2009-12-08

	* src/icons/stock_book.png
	  src/stock_pixmap.c: new icon.

2009-12-08

	* libsylph/folder.c
	  src/quick_search.[ch]: added 'Last 7 days' to the quick search.

2009-12-08

	* src/addressbook.c: added Search: label.

2009-12-08

	* src/compose.c: compose_close_cb(): fixed response handling on win32.

2009-12-08

	* src/addressbook.c: removed unused xpm objects. Added person icon.

2009-12-08

	* src/icons/address.xpm: modified icon.
	* src/icons/stock_person.png
	  src/stock_pixmap.[ch]: added new icon.

2009-12-08

	* libsylph/ssl.c
	  src/sslmanager.c: prohibit acception of expired certificates.

2009-12-08

	* src/compose.c: compose_close_cb(): modified button order on win32.

2009-12-04

	* src/summaryview.c: summary_filter_real(): disable sort while
	  filtering to prohibit 'The model has been modified from within
	  gtk_tree_selection_selected_foreach.' warning.

2009-11-26

	* version 3.0.0beta3

2009-11-26

	* src/Makefile.am: sylpheed.res: depend on icons/sylpheed.ico.

2009-11-26

	* src/addressbook.c: enabled lookup feature for all addressbook type.

2009-11-26

	* src/sylpheed.rc.in: modified LegalCopyright.

2009-11-26

	* libsylph/ssl.c: ssl_init_socket_with_method(): modified debug
	  output.

2009-11-26

	* libsylph/prefs_common.[ch]
	  src/prefs_common_dialog.c
	  src/folderview.c: the visibility of message number columns in the
	  folder view is now configurable for each column.

2009-11-26

	* libsylph/imap.c: made error log more verbose.
	* libsylph/socket.c: sock_connect_with_timeout(): check socket with
	  getsockopt() even if select() succeed.

2009-11-25
