@@ -1,3 +1,8 @@
+2009-12-10
+
+	* src/icons/folder-*.png
+	  src/stock_pixmap.c: added new folder icons.
+
 2009-12-09
 
 	* src/prefs_common_dialog.c: adjusted layout.
